--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 	<link rel="icon" type="image/x-icon" href="https://i.postimg.cc/TY4qLvMY/akshat.png">
 	<meta name="author" content="Akshat Mittal">
@@ -177,6 +177,6 @@
 		</section>
 		
 		<!-- Scripts  -->
-		<script src="controller.js"></script>		
+		<script src="js/controller.js"></script>		
 	</body>	
 </html>
