--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 		<section id="skills">
             <div class="containers">
-                <h2 class="title is-3"><u>Skills</u></h2>
+                <h2 class="title is-3">Skills</h2>
                 <div class="card">
                     <u>Programming languages:</u>
                     <div class="icons">
