--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 					Hi! I'm Akshat Mittal , A Data Science enthusiast who is interested in Data Base Management And I'm Trained to deal with real World problems. 
 					I'm eager to combine my passion for learning and teaching with my skills to tackle problems and continue growing.
 					Let's come to my hobbies I love to play football, basketball, cricket, vollyball, listen music, I prefer pubg to overcome stress, and likee to capture photos too.
+					<br> <a class="intros" href="https://docs.google.com/document/d/1NeEs9eZQyQuWyKdPK75LfmXNP8NnJ1SvYPdoXDn420w/edit?usp=sharing"> <u>Download my resume from here</u></a>
+
 				</p>
 			</div>
 		</section>
@@ -146,6 +148,7 @@
                         <img src="https://en.opensuse.org/images/e/e8/Vscode.png" alt="vs code" class="skill-imgs">
                         <img src="http://pngimg.com/uploads/github/github_PNG90.png" alt="github" class="skill-imgs">
                         <img src="http://msysgit.github.io/img/git_logo.png" alt="git" class="skill-imgs">
+						<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Microsoft_Office_Excel_%282018%E2%80%93present%29.svg/1200px-Microsoft_Office_Excel_%282018%E2%80%93present%29.svg.png" alt="excel" class="skill-imgs">
                     </div>
                 </div>
 
